--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 
     <!-- Add Firebase -->
 
-    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-analytics.js"></script>
+
 
 
     <script src="app.js"></script>
