added alert message, form clear out

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </div>
     <div class="contact">
       <h3>Email Us</h3>
-      <!-- @TODO - validation -->
+      <div class="alert">Your message has been sent!</div>
       <form id="contactForm">
         <p>
           <label>Name</label>
-          <input type="text" name="name" id="name">
+          <input type="text" name="name" id="name" required>
         </p>
         <p>
           <label>Company</label>
@@ -45,7 +45,7 @@
         </p>
         <p>
           <label>email address</label>
-          <input type="text" name="email" id="email">
+          <input type="email" name="email" id="email" required>
         </p>
         <p>
           <label>Phone</label>
